--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,10 +18,11 @@ add_executable(MinecraftClone main.cpp
         src/Utils/Math.cpp
         src/Core/World.h
         src/Core/World.cpp
-        src/Rendering/Camera.h
-        src/Rendering/Camera.cpp
+        src/Player/Player.h
+        src/Player/Player.cpp
         src/Utils/Texture.h
-        src/Utils/Texture.cpp)
+        src/Utils/Texture.cpp
+)
 
 set(SFML_STATIC_LIBRARIES TRUE)
 set(SFML_DIR "C:/Program Files/SFML-2.6.1/include/SFML")
